[tool.poetry]
name = "dummyserver"
version = "0.1.0"
description = ""
authors = ["Ulrich Petri <ulrich@brainbot.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jsonrpcserver = "^5.0.9"
click = "^8.1.3"
structlog = "^23.1.0"

[tool.poetry.scripts]
dummyserver = "dummyserver.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
